[package]
name = "pumpkin-essentials"
version = "0.1.0"
edition = "2021"

[profile.release] 
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin" }
pumpkin-util = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-util" }
pumpkin-api-macros = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-api-macros" }

async-trait = "0.1"
tokio = { version = "1.42", features = ["rt-multi-thread"] }
log = "0.4"
uuid = "1.16.0"
once_cell = "1.21.1"
lazy_static = "1.5.0"
dashmap = "6.1.0"