[package]
name = "pumpkin-essentials"
version = "0.1.0"
edition = "2021"

[profile.release] 
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin = { path = "../../Pumpkin/pumpkin" }
pumpkin-util = { path = "../../Pumpkin/pumpkin-util" }
pumpkin-api-macros = { path = "../../Pumpkin/pumpkin-api-macros" }
pumpkin-world = { path = "../../Pumpkin/pumpkin-world" }
pumpkin-data = { path = "../../Pumpkin/pumpkin-data" }

async-trait = "0.1"
tokio = { version = "1.46", features = ["rt-multi-thread"] }
futures = "0.3.31"
log = "0.4"
dashmap = "6.1.0"
uuid = "1.16.0"
once_cell = "1.21.1"
lazy_static = "1.5.0"
